@@ -61,9 +61,8 @@ pthread_spin_unlock (pthread_spinlock_t * lock)
 					      (PTW32_INTERLOCKED_LONG) PTW32_SPIN_LOCKED))
     {
     case PTW32_SPIN_LOCKED:
-      return 0;
     case PTW32_SPIN_UNLOCKED:
-      return EPERM;
+      return 0;
     case PTW32_SPIN_USE_MUTEX:
       return pthread_mutex_unlock (&(s->u.mutex));
     }
